fix(general-row): overlapping text - vue 3 (#1037)
* fix(general-row): overlapping text

* change to a JS approach.

* vue 3 migration

--- a/recipes/leftbar/style/leftbar_row.less
+++ b/recipes/leftbar/style/leftbar_row.less
@@ -16,7 +16,7 @@
   --leftbar-row-alpha-height: calc(var(--size-300) * 9);
   --leftbar-row-omega-min-width: 0;
   --leftbar-row-omega-height: var(--leftbar-row-alpha-height);
-  --leftbar-row-omega-display: block;
+  --leftbar-row-omega-display: inline-flex;
   --leftbar-row-description-font-weight: var(--fw-normal);
   --leftbar-row-description-font-size: var(--fs-200);
   --leftbar-row-description-line-height: var(--lh-200);
@@ -50,8 +50,12 @@
   //  </div>
   //
   &:not(.dt-leftbar-row--no-action):hover {
-    --leftbar-row-omega-display: none;
-    --leftbar-row-omega-min-width: var(--leftbar-row-alpha-width);
+      --leftbar-row-omega-display: none;
+      --leftbar-row-omega-min-width: var(--leftbar-row-alpha-width);
+
+      .dt-leftbar-row__action {
+        display: inline-flex;
+      }
   }
 
   &:hover {
@@ -67,6 +71,10 @@
   &--has-unread {
     --leftbar-row-description-font-weight: var(--fw-bold);
     --leftbar-row-alpha-color-foreground: var(--leftbar-row-color-foreground);
+
+    .dt-leftbar-row__action {
+      display: none;
+    }
   }
 
   &--muted {
@@ -160,13 +168,6 @@
     }
   }
 
-  &__action {
-    position: absolute;
-    right: 0;
-    top: var(--leftbar-row-action-position-bottom);
-    transform: translateY(calc(var(--leftbar-row-action-position-bottom) * -1));
-  }
-
   &__action-button {
     opacity: 0;
     width: var(--leftbar-row-action-width);
@@ -200,7 +201,7 @@
   }
 
   &__label {
-    flex: 1;
+    flex: 0 1;
     min-width: 0;
   }
 
